Changes for 1.6
* Created new game option, "Subs Can End NonCombat Move With Enemies", which allows submarines to end their noncombat movement in a sea zone containing any enemy units. (veqryn)

* Added information on which units are doing the bomber to the question about what should each bomber bomb. (veqryn)

* Fixed error from trying to undo a battle move created using another player's units, using edit mode. (veqryn)

* Fixed null pointer exception when not selecting the target for a bomber after an air battle is finished. (veqryn)

* Allowed interceptors and escorts to benefit from attackRolls and defenseRolls and their bonuses. (veqryn)

* Created new delegate, NoAirCheckPlaceDelegate, which does everything the normal "PlaceDelegate" does, but does not kill any aircraft at the end of the phase. (veqryn)

* Fixed issue with not being able to blitz through units owned by a power to which you were neutral with. (veqryn)

* Allowed loading of transports in Sea Zones where all enemies just became hostile this turn due to politics. (veqryn)

* Fixed issue with loading transports in the same sea zone where a transport was previously unload in a previous phase. (veqryn)

* Fixed issue with having multiple support attachment affecting the same group of units. The order of preference is now: highest bonus support first, then lowest number of supported types to highest number of types. (veqryn)

* Created new techAbilityAttachment option, "bombingBonus", which will add additional damage after all dice are rolled, per unit. (veqryn)

* Created new techAbilityAttachment option, "defenseRollsBonus", which adds additional defense rolls. (veqryn)

* Created new techAbilityAttachment option, "attackRollsBonus", which adds additional attack rolls. (veqryn)

* Created new UnitAttachment option, "chooseBestRoll", which controls whether we select the best dice or use all the dice rolled, when there is more than one die rolled. (veqryn)
