@@ -1,4 +1,6 @@
 Changes for 1.6
+* Fixed fatal error in HistoryLog, caused by clearing an array that potentially gets accessed later at a specific index number, from doing an edit during a movement phase then doing an undo later. (veqryn)
+
 * Created new game option, "Subs Can End NonCombat Move With Enemies", which allows submarines to end their noncombat movement in a sea zone containing any enemy units. (veqryn)
 
 * Added information on which units are doing the bomber to the question about what should each bomber bomb. (veqryn)
